# MyDegree

./: .eslintrc.js  .firebaserc  .gitattributes  .gitignore  Cargo.toml  LICENSE.md  PLAN_RUST_FRONTEND.md  README.md  application.py  firebase.json  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/: Cargo.toml  Trunk.toml  build.rs  courses.json  firebase_bridge.js  firebase_bridge_src.mjs  firebase_config.example.js  index.html  manifest.json  package-lock.json  package.json  purgecss.config.cjs  service-worker.js  style.css
frontend/src/: app.rs  firebase.rs  histogram.rs  main.rs  state.rs
frontend/src/components/: achievements.rs  course_map.rs  degree_summary.rs  footer.rs  header.rs  histogram_viewer.rs  mobile.rs  mod.rs  search_dialog.rs  semester_table.rs  semesters_tab_view.rs
python_scripts/rust_scraper/: Cargo.toml  README.md
python_scripts/rust_scraper/.cache/: SemesterSet_sap-client=700&$select=PiqYear,PiqSession,Begda,Endd_eda252b5f63ab36d.json  SmObjectSet_sap-client=700&$filter=Peryr%20eq%20'2021'%20and%20P_10530913c8334ed3.json  SmObjectSet_sap-client=700&$filter=Peryr%20eq%20'2021'%20and%20P_1097975f9d5049b9.json  SmObjectSet_sap-client=700&$filter=Peryr%20eq%20'2021'%20and%20P_10c2255627966057.json  SmObjectSet_sap-client=700&$filter=Peryr%20eq%20'2021'%20and%20P_10e96d4e5037c07e.json  SmObjectSet_sap-client=700&$filter=Peryr%20eq%20'2021'%20and%20P_10fd44932277bd15.json  SmObjectSet_sap-client=700&$filter=Peryr%20eq%20'2021'%20and%20P_11650bf53e36309c.json  (+1198 more)
python_scripts/rust_scraper/src/: course.rs  fetcher.rs  main.rs  (+2 more)
(+137 files in other folders)
