[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
degree-core = { path = "../degree-core" }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlElement", "Window", "Document", "Storage", "MouseEvent", "KeyboardEvent", "Event"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
